@@ -7,7 +7,8 @@ version 0.7.3:
   - new audio options: '-soundhw' and '-audio-help' (malc)
   - ES1370 PCI audio device (malc)
   - Initial USB support
-   
+  - Linux host serial port access
+
 version 0.7.2:
   
   - x86_64 fixes (Win2000 and Linux 2.6 boot in 32 bit)
